.metals/metals.log
2023.04.12 14:34:36 INFO  Started: Metals version 0.11.11 in workspace '/Users/agusnavce/web3' for client Visual Studio Code 1.77.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/agusnavce/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.04.12 14:34:37 INFO  time: initialize in 1.24s
2023.04.12 14:34:42 WARN  Build server is not auto-connectable.
2023.04.12 14:34:42 WARN  no build tool detected in workspace '/Users/agusnavce/web3'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.04.14 10:41:31 INFO  Shutting down server
2023.04.14 10:41:31 INFO  shutting down Metals
2023.04.14 10:41:31 INFO  Exiting server
2023.04.17 17:30:51 INFO  Started: Metals version 0.11.11 in workspace '/Users/agusnavce/web3' for client Visual Studio Code 1.77.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/agusnavce/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.04.17 17:30:52 INFO  time: initialize in 0.93s
2023.04.17 17:30:55 WARN  Build server is not auto-connectable.
2023.04.17 17:30:55 WARN  no build tool detected in workspace '/Users/agusnavce/web3'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.04.17 17:30:55 WARN  no build target for: /Users/agusnavce/web3/frontend/src/pages/.java
2023.04.17 17:30:57 WARN  Running javac-semanticdb failed for file:///Users/agusnavce/web3/frontend/src/pages/.java. Output:
/Users/agusnavce/web3/frontend/src/pages/.java:3: error: <identifier> expected
public @interface  {
                 ^
1 error
2023.04.17 18:02:37 WARN  no build target for: /Users/agusnavce/web3/frontend/src/pages/.java
2023.04.17 19:31:25 INFO  Shutting down server
2023.04.17 19:31:25 INFO  shutting down Metals
2023.04.17 19:31:25 INFO  Exiting server
2023.04.24 11:34:25 INFO  Started: Metals version 0.11.11 in workspace '/Users/agusnavce/web3' for client Visual Studio Code 1.77.2.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/agusnavce/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.04.24 11:34:26 INFO  time: initialize in 0.69s
2023.04.24 11:34:28 WARN  Build server is not auto-connectable.
2023.04.24 11:34:28 WARN  no build tool detected in workspace '/Users/agusnavce/web3'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.04.27 17:09:00 INFO  Shutting down server
2023.04.27 17:09:00 INFO  shutting down Metals
2023.04.27 17:09:00 INFO  Exiting server
